--- a/Software/MDToolsUI/MDToolsUI.csproj
+++ b/Software/MDToolsUI/MDToolsUI.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Terminal.Gui" Version="1.15.0-pre.4" />
+    <PackageReference Include="Terminal.Gui" Version="1.16.0" />
   </ItemGroup>
 
   <ItemGroup>
